# Enflopio

./: .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.txt  docker-compose.yml  emscripten.profile
.github/workflows/: docker-image.yml
backend/: CMakeLists.txt
client/: CMakeLists.txt  emscripten.html
client/src/: App.cpp  App.hpp  Camera.hpp  CircleBatch.hpp  GameLoop.hpp  GlIncludes.hpp  InputManager.hpp  NetworkManager.hpp  app.cpp  app.hpp  asio_connection.cpp  asio_connection.hpp  camera.hpp  circle_batch.cpp  circle_batch.hpp  game_loop.cpp  game_loop.hpp  host_resolver.hpp  input_manager.cpp  input_manager.hpp  interpolation_process.hpp  linmath.h  main.cpp  network_input_manager.cpp  network_input_manager.hpp  network_manager.cpp  network_manager.hpp  protocol_impl.cpp  protocol_impl.hpp  shader.hpp  shader_loader.cpp  shader_loader.hpp  websocket_connection.hpp
core/: CMakeLists.txt
core/src/: CirclePhysics.hpp  Messages.hpp  Protocol.hpp  World.hpp  circle_physics.hpp  controls_state.hpp  game_loop.hpp  generic_processes.hpp  messages.hpp  network_controls.hpp  player.hpp  process_manager.cpp  process_manager.hpp  protocol.hpp  serialization.hpp  test.cpp  test.hpp  world.hpp
core/src/utils/: glm_operators.hpp  logging.cpp  logging.hpp  strings.hpp
libs/: CMakeLists.txt
server/: CMakeLists.txt
server/src/: connection.hpp  connection_manager.cpp  connection_manager.hpp  main.cpp  protocol_impl.cpp  protocol_impl.hpp  repl.cpp  repl.hpp  repl_sink.hpp  server.cpp  server.hpp  tcp_connection.cpp  tcp_connection.hpp  tcp_connection_listener.cpp  tcp_connection_listener.hpp  websocket_connection.cpp  websocket_connection.hpp  websocket_connection_listener.cpp  websocket_connection_listener.hpp
